style: fix sidebar color in dark mode

--- a/css/origin.css
+++ b/css/origin.css
@@ -19,7 +19,7 @@
 
   --line-default-color: #333333;
 
-  --sidebar-background-color: #333333;
+  --sidebar-background-color: #2e2e2e;
   --sidebar-highlight-background-color: #4d4d4d;
   --sidebar-highlight-text-color: #ffffff;
   --sidebar-hover-background-color: #3c3c3c;
